[Windows] Include service installation instructions (#398)
* Include Windows Service Installation method

Signed-off-by: Angelos Fountoulakis <agf@wired-net.gr> (github: AngelosF)

* Small formatting corrections

Signed-off-by: Angelos Fountoulakis <agf@wired-net.gr> (github: AngelosF)

* More formatting changes...

Signed-off-by: Angelos Fountoulakis <agf@wired-net.gr> (github: AngelosF)

* Images for Windows Installation

Signed-off-by: Angelos Fountoulakis <agf@wired-net.gr> (github: AngelosF)

* 1 more image

Signed-off-by: Angelos Fountoulakis <agf@wired-net.gr> (github: AngelosF)

* More formatting changes (and images)

Signed-off-by: Angelos Fountoulakis <agf@wired-net.gr> (github: AngelosF)

* Change wrapper.log destination

Signed-off-by: Angelos Fountoulakis <agf@wired-net.gr> (github: AngelosF)

* Add more SSH Client options

Signed-off-by: Angelos Fountoulakis agf@wired-net.gr (github: AngelosF)

* Added OPENHAB_* (as in oh2_dir_layout)

Signed-off-by: Angelos Fountoulakis agf@wired-net.gr (github: AngelosF)

* Downloadable Wrapper config file

Unfortunately, the auto generated wrapper.conf is "broken" and we need to make significant changes to it for the installation of the Windows service to work.
(temporarily) We can provide two methods/options to fix this issue: (1) download the attached template and overwrite existing or (2) manually edit existing

Signed-off-by: Angelos Fountoulakis agf@wired-net.gr (github: AngelosF)

* Updated following @ThomDietrich's review

Hopefully it's better now... (it's not perfect.. I know :))

Signed-off-by: Angelos Fountoulakis agf@wired-net.gr (github: AngelosF)

* FIx formatting issues

Signed-off-by: Thomas Dietrich <thomas.dietrich@tu-ilmenau.de> (github: ThomDietrich)

* Improve numbered list indention

Signed-off-by: Thomas Dietrich <thomas.dietrich@tu-ilmenau.de> (github: ThomDietrich)

* New update

[!] Rephrased installation step 4 for the windows serv